fix word-wrap

--- a/web/src/components/dialog-message/dialog-message.sass
+++ b/web/src/components/dialog-message/dialog-message.sass
@@ -26,7 +26,7 @@
 
 	&__text
 		font-size: 13px
-	  	word-wrap: break-word
+	  	@include word-wrap();
 
 	&__time
 		display: inline-block
