--- a/web/src/components/mixins.sass
+++ b/web/src/components/mixins.sass
@@ -4,6 +4,15 @@
 	border: 0
 	cursor: pointer
 
+@mixin word-wrap()
+	-ms-word-break: break-all;
+	word-break: break-all;
+	word-break: break-word;
+	-webkit-hyphens: auto;
+	-moz-hyphens: auto;
+	hyphens: auto;
+
+
 @mixin default-markdown-styles()
 	table
 		th
